style.css
/* ... */
.pink-background {
  background-color: #6a4256 !important;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #395f5f;
  min-width: 8rem;
  z-index: 1;
}

.dropdown-content a {
  float: none;
  color: white;
  padding: 0.01rem 1rem;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {
  background-color: DarkSlateGrey;
}

.topBarDropDown:hover .dropdown-content {
  display: block;
}

.content {
  margin-top: 3rem;
  padding-left: 15%;
  padding-right: 15%;
  min-height: 50%;
}

.warningBar {
  margin-top: 5rem;
  padding: 1rem;
  border: 1px solid FireBrick;
  border-radius: 16px;
  width: 27.5%;
  min-height: 3.5em;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.star-rating-list {
  cursor: pointer;
  white-space: nowrap;
  display: flex;
  padding: 0;
  font-size: 18px;
  box-sizing: border-box;
}

.friend-box {
  width: 7em;
  display: flex;
  margin: 0.25em;
  padding: 1em;
  text-align: center;
  aspect-ratio: 1 / 1;
  vertical-align: middle;
  align-items: center;
  justify-content: center;
  background-color: DarkSlateGrey;
}

.starRemoveButton {
  opacity: 0;
  font-size: 16px;
  box-sizing: border-box;
}

.star-rating-list-mobile {
  display: none;
}

.hamburgerToggle {
  display: none;
}

.hamburgerLabel {
  display: none;
  font-size: 1.1rem;
  cursor: pointer;
  padding: 0 0.6rem;
  color: #6fffea;
  height: 100%;
  align-items: center;
}

.mobileMenuPanel {
  display: none;
}

@media only screen and (max-width: 1050px) {
  .content {
    padding-left: 10%;
    padding-right: 10%;
  }

  .topBar {
    padding-left: 2%;
    padding-right: 2%;
  }

  .column-when-mobile-container {
    flex-direction: column;
  }

  .column-when-mobile {
    width: 100% !important;
  }

  .star-rating-list, .starRemoveButton, .star-value {
    display: none !important;
  }

  .star-rating-list-mobile {
    display: initial;
  }

  .hamburgerLabel {
    display: flex;
    order: -1;
  }

  .hideOnMobile {
    display: none !important;
  }

  .mobileMenuPanel {
    display: none;
    flex-direction: column;
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    background-color: #182828;
    z-index: 998;
    line-height: 2.5rem;
  }

  .hamburgerToggle:checked ~ .mobileMenuPanel {
    display: flex;
  }

  .mobileMenuPanel a, .mobileMenuPanel .topBarDropDown, .mobileMenuPanel .topBarLink {
    width: 100%;
    box-sizing: border-box;
  }

  .mobileMenuPanel .topBarLink {
    text-align: left;
    padding-left: 1.25rem;
    height: auto;
    background-color: transparent;
  }

  .mobileMenuPanel .topBarLink:hover {
    background-color: #0c1515;
  }

  .mobileMenuPanel .topBarDropDownButton {
    font-weight: bold;
    background-color: #0c1515;
  }

  .mobileMenuPanel .dropdown-content {
    position: static;
    display: block !important;
    background-color: transparent;
  }

  .mobileMenuPanel .dropdown-content a {
    padding-left: 2.5rem;
    line-height: 2.25rem;
  }
}

.identifier:hover ~ .starRemoveButton:not(.disabled),
.starRemoveButton:hover:not(.disabled) {
  opacity: 0.5;
  cursor: pointer;
}

.disabled {
  pointer-events: none;
}

.star-value {
  font-size: 18px;
  display: inline-block;
}

.star {
  white-space: nowrap;
}

span.subText {
  font-size: 11px;
  color: #a8a8a8;
}

.badge {
  padding: 0.1em 0.4em;
  border-radius: 999px;
  background: #6fffea;
  color: black;
  font-size: 0.7em;
  font-weight: 700;
}

.ratingContainer {
  background-color: DarkSlateGrey;
  align-items: center;
}

img {
  vertical-align: middle;
}

.flex-container {
  display: flex;
  width: 100%;
}

.flex-row-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.flex-child {
  margin: 0.25em;
  vertical-align: middle;
}

.diffThumb {
  height: 32px;
  width: 32px;
  border: 1px solid #ddd;
  object-fit: cover;
}

.chart-container {
  background-color: DarkSlateGrey;
  align-items: center;
}

.chart-container > div {
  padding: 0.5em;
  flex-grow: 1;
  height: 100%;
}

.pagination {
  display: inline-block;
  color: DarkSlateGrey;
}

.pagination #page {
  color: white;
}

.pagination a {
  color: darkslategray;
}

.pagination span {
  float: left;
  padding: 8px 16px;
  text-decoration: none;
  cursor: pointer;
}

.pagination .active {
  font-weight: 900;
  color: white;
}

select {
  margin: 0.2em;
  padding: 0.2em;
  border: none;
  border-radius: 1px;
  background-color: DarkSlateGrey;
  color: white;
}

button,
input[type="button"] {
  min-width: 6em;
  border: 1px solid white;
  background-color: #203838;
  color: white;
}

button:hover,
input[type="button"]:hover {
  background-color: #182828;
  cursor: pointer;
}

button.mutual {
  background-color: #714977;
}

button.mutual:hover {
  background-color: #492450;
}

button.blocked {
  background-color: #774949;
}

button.blocked:hover {
  background-color: #502424;
}

.difficulty-container {
  background-color: DarkSlateGrey;
  justify-content: space-between;
  align-items: center;
  min-height: 5.5em;
}

.difficulty-container > div {
  flex-grow: 1;
  height: 100%;
}

.mapsetRankingDistribution {
  width: 100%;
  height: 1.5rem;
  margin: 0px;
  color: rgba(125, 125, 125, 0.33);
  display: flex;
  transform: rotate(180deg);
}

.mapsetRankingDistributionBar {
  min-height: 0px;
  margin: 0px;
  padding: 0px;
  text-align: left;
  vertical-align: bottom;
  background-color: rgba(125, 125, 125, 0.33);
  border-bottom: 1px solid rgba(125, 125, 125, 0.33);
  transition: background-color 0.15s ease;
}

.mapsetRankingDistributionBar:hover {
  background-color: rgba(125, 125, 125, 0.66);
}

.commentContainer {
  background-color: DarkSlateGrey;
  padding: 0px;
  align-items: center;
  align-content: center;
  flex-wrap: wrap;
}

.commentHeader {
  align-items: center;
  background-color: #203838;
  padding: 0.25em;
  margin: 0;
  box-sizing: border-box;
}
/* ... */

